[tool.poetry]
name = "mppsolar"
version = "0.14.11"
description = "Package to communicate with Solar inverters and BMSs"
authors = ["John Blance"]

[tool.poetry.dependencies]
python = ">=3.8"
pyserial = "*"
paho-mqtt = "*"
PyYAML = "*"
bluepy = "*"

[tool.poetry.dev-dependencies]
check-manifest = "*"
flake8 = "*"
coverage = "*"
black = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mpp-solar = "mppsolar:main"
jkbms = "mppsolar:main"
powermon= "mppsolar.powermon:main"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["isort", "test"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=mppsolar"
testpaths = [
    "tests",
]
